package com.finquik.models;

/**
 * Represents the different types of accounts a user can have.
 */
public enum AccountType {
    CASH,
    BANK_ACCOUNT,
    CREDIT_CARD,
    INVESTMENT,
    OTHER
}