package com.finquik.models;

/**
 * Represents the type of a Category, either for income or for expenses.
 */
public enum CategoryType {
    INCOME,
    EXPENSE
}
