@startuml
'https://plantuml.com/class-diagram

class Account {
id: int
name: String
type: Enum - AccountType
initialBalance: BigDecimal
currentBalance: BigDecimal
currency: String
createdAt: Date
updatedAt: Date
User: user
}

class User {
id: int
firstName: String
lastName: String
email: String
password: String
createdAt: Date
updatedAt: Date

}

class Category {
id: int
name: String
type: Enum - CategoryType
user: User
createdAt: Date
updatedAt: Date
}

enum CategoryType {
  INCOME
  EXPENSE
}

enum AccountType {
  CASH
  CHECKING
  CREDIT_CARD
  INVESTMENT
}

class Transaction {
id: int
amount: BigDecimal
description: String
transactionDate: Date
attachmentUrl: String
user: User
account: Account
category: Category
createdAt: Date
updatedAt: Date
}

' Defines a one-to-many relationship
' One User can have many (*) Accounts
User "1" -- "*" Account

' Defines a one-to-many relationship
' One User can have many (*) Categories
User "1" -- "*" Category

' Defines a one-to-many relationship
' One User can have many (*) Transactions
User "1" -- "*" Transaction

' Defines a one-to-many relationship
' One Account can have many (*) Transactions
Account "1" -- "*" Transaction

' Defines a one-to-many relationship
' One Category can have many (*) Transactions
Category "1" -- "*" Transaction

' Defines the relationship between Account and its type
Account -- AccountType

' Defines the relationship between Category and its type
Category -- CategoryType

@enduml